# spyland

./: Cargo.toml  SECURITY.md  flake.nix  justfile
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: analytics.rs  lib.rs  manager.rs
core/tests/: analytic.rs  base.rs  common.rs  config.rs  lib.rs  responses.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/src/: analytics.rs  lib.rs  manager.rs
crates/core/tests/: analytic.rs  common.rs  config.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app.rs  main.rs
crates/lib/: Cargo.toml
crates/lib/.sqlx/: query-513090e5932a0aa8bfd6bdca006a992c45373d4dd808dc0b42e5598634abc8d6.json  query-7c1abb836cc41db09df20efbc4b52dac0c814cd364d50d2cd3b044e62401f325.json  query-93c3e6d24222a76e75aba1d44128bd945e77e7a7900a6acc28e62afec53533fc.json  query-c6c7f63088a6be8b6a36459b49db96d7de25a24a5346790e27aa5f67aae9cfb5.json  query-d5c06650cc50dfa3ddaff51b623107fa061eb916e8d4701629b5af9b1c94394e.json  query-e359f61f4a31f5b72a07cef540056a60e1a34794eb0626cce444c9916e7ebeb6.json
crates/lib/src/: config.rs  lib.rs  path.rs
crates/lib/src/db/: mod.rs  sessql.rs  tests.rs
crates/lib/src/ipc/: mod.rs  protocol.rs
crates/lib/tests/: config.rs  ipc.rs
crates/niri/: Cargo.toml
crates/niri/src/: backend.rs  lib.rs
crates/niri/tests/: backend.rs  common.rs
daemon/: .env  Cargo.toml
daemon/src/: app.rs  db.rs  main.rs
docs/en/: CONTRIBUTING.md  README.md  SECURITY.md
docs/ru/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md
ipc/: Cargo.toml
ipc/src/: lib.rs
lib/: Cargo.toml
lib/.sqlx/: query-d130c416e56962ab334ee1b4ca77369a4c35dbc1cf31279f7ed4d418ed75aabb.json
lib/src/: db.rs  lib.rs  path.rs
lib/src/db/: mod.rs  sessql.rs  tests.rs
lib/src/ipc/: mod.rs  protocol.rs
lib/tests/: ipc.rs
niri/: Cargo.toml
niri/src/: backend.rs  lib.rs  main.rs
niri/tests/: backend.rs  common.rs
res/: spyland-backend-niri.service  spyland-backends.target  spylandd.service
