[package]
name = "spyland"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
spyland-core = { version = "0.1.0", path = "../core" }
spyland-lib = { version = "0.1.0", path = "../lib" }
tokio = { version = "1.52.1", features = ["macros", "rt", "rt-multi-thread"] }
