[package]
name = "spyland"
version.workspace = true
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
serde = "1.0.228"
spyland-core = { version = "0.1.0", path = "../core" }
spyland-lib = { version = "0.1.0", path = "../lib" }
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.52.1", features = ["macros", "rt", "rt-multi-thread"] }
toml = "1.1.2"
