[package]
name = "spylandd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
spyland-backend-niri = { version = "0.1.0", path = "../niri" }
spyland-core = { version = "0.1.0", path = "../core" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.51.1", features = ["rt", "macros", "rt-multi-thread"] }
