[package]
name = "spyland-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spyland-core = { version = "0.1.0", path = "../core" }
sqlx = { version = "0.8.6", features = ["sqlite"] }

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
tempfile = "3.27.0"
