[package]
name = "spyland-backend-niri"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
niri-ipc = "25.11.0"
spyland-core = { version = "0.1.0", path = "../core" }
spyland-lib = { version = "0.1.0", path = "../lib", default-features = false, features = ["ipc", "path"] }

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.27.0"
